<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="hint_email">example@mail.com</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="login_button">Login</string>
    <string name="welcome_text">Welcome to Shoe Store Online App</string>
    <string name="welcome_text_two">Next page will introduce the instructions about how to use the app</string>
    <string name="welcome_screen_button">Instruction Page</string>
    <string name="instructions">You can check out variety of shoes in the next page</string>
    <string name="show_ins">Also, you can add new shoe into our store list using a floating button on the bottom left hand corner</string>
    <string name="shoe_list">Shoe List</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="password_hint">******</string>


</resources>