<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionFragment"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="@dimen/sixteen_dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:layout_marginBottom="@dimen/sixteen_dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_ins"
        android:layout_marginBottom="@dimen/sixteen_dp"/>

    <Button
        android:id="@+id/go_to_shoe_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoe_list" />


</LinearLayout>
</layout>