<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    Using Constraint Layout because the hierarchy of views require nested layouts which decreases performance
 takes more time to render. For more complex positioning views, Constraint layout is better option-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/sixteen_dp"
        tools:context=".LoginFragment">

        <TextView
            android:id="@+id/txt_login"
            style="@style/txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_border_edt"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/eight_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/txt_login"
            app:layout_constraintTop_toBottomOf="@id/txt_login" />

        <TextView
            android:id="@+id/txt_pass"
            style="@style/txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/edt_login"
            app:layout_constraintTop_toBottomOf="@+id/edt_login" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:background="@drawable/rounded_border_edt"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/eight_dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintStart_toStartOf="@+id/txt_pass"
            app:layout_constraintTop_toBottomOf="@+id/txt_pass" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintEnd_toEndOf="@+id/edt_password"
            app:layout_constraintStart_toEndOf="@+id/sign_in_button"
            app:layout_constraintTop_toTopOf="@+id/sign_in_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>