<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="jawoheer.example.shoestore.shoeList.ShoeListViewModel" />

        <variable
            name="shoeData"
            type="jawoheer.example.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".shoeList.ShoeDetailFragment">

        <TextView
            android:id="@+id/txt_shoe_name"
            style="@style/txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:text="@string/shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@={shoeData.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_shoe_name"
            tools:text="Nemesis" />

        <TextView
            android:id="@+id/textView2"
            style="@style/txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="@+id/txt_shoe_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_shoe_name" />

        <EditText
            android:id="@+id/edt_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoeData.company}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/edt_shoe_name"
            app:layout_constraintStart_toStartOf="@+id/edt_shoe_name"
            tools:text="Adidas" />

        <TextView
            android:id="@+id/textView3"
            style="@style/txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/shoe_size"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/edt_shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@={`` + shoeData.size}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/edt_company"
            app:layout_constraintStart_toStartOf="@+id/edt_company"
            tools:text="10.0" />

        <TextView
            android:id="@+id/textView4"
            style="@style/txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={shoeData.description}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/edt_shoe_size"
            app:layout_constraintStart_toStartOf="@+id/edt_shoe_size"
            tools:text="One of the best sneakers that have ever been made." />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="64dp"
            android:onClick="@{() -> viewModel.navigateToShoeList(shoeData)}"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/save_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>